--- a/book/index.html
+++ b/book/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduction - Why Rust ?</title>
+        <title>Preface - Why Rust ?</title>
 
 
         <!-- Custom HTML head -->
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">4.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">5.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">6.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">7.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">8.</strong> Safety</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">10.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="stability.html"><strong aria-hidden="true">11.</strong> Stability</a></li><li class="chapter-item expanded "><a href="real_world.html"><strong aria-hidden="true">12.</strong> Real-World</a></li><li class="chapter-item expanded "><a href="contribution.html"><strong aria-hidden="true">13.</strong> Contribution</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">14.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">15.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/ferris.html"><strong aria-hidden="true">15.1.</strong> Ferris</a></li><li class="chapter-item expanded "><a href="appendix/rustlings_welcome_message.html"><strong aria-hidden="true">15.2.</strong> Rustlings Welcome Message</a></li><li class="chapter-item expanded "><a href="appendix/sources_references.html"><strong aria-hidden="true">15.3.</strong> Sources and References</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="preface.html" class="active"><strong aria-hidden="true">1.</strong> Preface</a></li><li class="chapter-item expanded "><a href="prologue.html"><strong aria-hidden="true">2.</strong> Prologue</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">3.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">4.</strong> Community</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">5.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">6.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">7.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">8.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="stability.html"><strong aria-hidden="true">9.</strong> Stability</a></li><li class="chapter-item expanded "><a href="refresh.html"><strong aria-hidden="true">10.</strong> Refresh</a></li><li class="chapter-item expanded "><a href="contribution.html"><strong aria-hidden="true">11.</strong> Contribution</a></li><li class="chapter-item expanded "><a href="real_world.html"><strong aria-hidden="true">12.</strong> Real-World</a></li><li class="chapter-item expanded "><a href="future.html"><strong aria-hidden="true">13.</strong> Future</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">14.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/ferris.html"><strong aria-hidden="true">14.1.</strong> Ferris</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -171,31 +171,22 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Hello, friend! Right from the start, I want to clarify that my aim isn't to
-convince anyone of anything, but to make it easier for those interested or
-curious to find the information they need to get started.
-And for those who, like me, appreciate constant reminders of why choosing Rust
-was the best decision ever: there's a good chance you'll find something valuable
-here.</p>
-<p>As a little Rustacean, I won't delve deeply into explaining Rust's arcane
-secrets, recognizing that many others, more qualified, have already done so.
-My goal is to curate some of these available resources and insights
-in a clear and meaningful way, hoping it resonates with you as well.</p>
-<p>This <a href="https://rust-lang.github.io/mdBook/">mdBook</a> is an opportunity
-for me to share my enthusiasm and help spread the word.
-Within these pages, you'll find links to articles, blog posts, videos,
-books, and any other relevant materials that have caught my attention and seem
-worth sharing.</p>
-<p>If you've come this far, I assume you're already on board.
-So, let's embark on this journey together.</p>
+                        <h1 id="preface"><a class="header" href="#preface">Preface</a></h1>
+<p>Hello, friend! Right from the start, I want to clarify that as a little
+Rustacean I won't delve deeply into explaining Rust's arcane secrets. This
+<a href="https://rust-lang.github.io/mdBook/">mdBook</a> is merely an excuse for me to
+share my enthusiasm and some thoughts from my journey so far.</p>
+<p>If you've come all the way here, I assume you're already on board. So, let's
+sail together! Hopefully, you will find something valuable within these pages.
+Even if it's just a small reminder of why choosing Rust was the best decision
+ever.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next prefetch" href="empowerment.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="prologue.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -206,7 +197,7 @@ So, let's embark on this journey together.</p>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next prefetch" href="empowerment.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="prologue.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
