--- a/book/real_world.html
+++ b/book/real_world.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">2.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">3.</strong> Community</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">4.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">5.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">6.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">7.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="safety.html"><strong aria-hidden="true">8.</strong> Safety</a></li><li class="chapter-item expanded "><a href="performance.html"><strong aria-hidden="true">9.</strong> Performance</a></li><li class="chapter-item expanded "><a href="concurrency.html"><strong aria-hidden="true">10.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="stability.html"><strong aria-hidden="true">11.</strong> Stability</a></li><li class="chapter-item expanded "><a href="real_world.html" class="active"><strong aria-hidden="true">12.</strong> Real-World</a></li><li class="chapter-item expanded "><a href="contribution.html"><strong aria-hidden="true">13.</strong> Contribution</a></li><li class="chapter-item expanded "><a href="future_prospects.html"><strong aria-hidden="true">14.</strong> Future Prospects</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">15.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/ferris.html"><strong aria-hidden="true">15.1.</strong> Ferris</a></li><li class="chapter-item expanded "><a href="appendix/rustlings_welcome_message.html"><strong aria-hidden="true">15.2.</strong> Rustlings Welcome Message</a></li><li class="chapter-item expanded "><a href="appendix/sources_references.html"><strong aria-hidden="true">15.3.</strong> Sources and References</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="preface.html"><strong aria-hidden="true">1.</strong> Preface</a></li><li class="chapter-item expanded "><a href="prologue.html"><strong aria-hidden="true">2.</strong> Prologue</a></li><li class="chapter-item expanded "><a href="empowerment.html"><strong aria-hidden="true">3.</strong> Empowerment</a></li><li class="chapter-item expanded "><a href="community.html"><strong aria-hidden="true">4.</strong> Community</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">5.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="tooling.html"><strong aria-hidden="true">6.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="ecosystem.html"><strong aria-hidden="true">7.</strong> Ecosystem</a></li><li class="chapter-item expanded "><a href="documentation.html"><strong aria-hidden="true">8.</strong> Documentation</a></li><li class="chapter-item expanded "><a href="stability.html"><strong aria-hidden="true">9.</strong> Stability</a></li><li class="chapter-item expanded "><a href="refresh.html"><strong aria-hidden="true">10.</strong> Refresh</a></li><li class="chapter-item expanded "><a href="contribution.html"><strong aria-hidden="true">11.</strong> Contribution</a></li><li class="chapter-item expanded "><a href="real_world.html" class="active"><strong aria-hidden="true">12.</strong> Real-World</a></li><li class="chapter-item expanded "><a href="future.html"><strong aria-hidden="true">13.</strong> Future</a></li><li class="chapter-item expanded "><a href="appendix/index.html"><strong aria-hidden="true">14.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="appendix/ferris.html"><strong aria-hidden="true">14.1.</strong> Ferris</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -177,11 +177,11 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="stability.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="contribution.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="contribution.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="future.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -191,11 +191,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="stability.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="contribution.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="contribution.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="future.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
