--- a/getting_started.html
+++ b/getting_started.html
@@ -172,8 +172,14 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
-<p>On Rust's official website, the <a href="https://www.rust-lang.org/learn">learn section</a>
-introduces three different options for getting started with Rust.</p>
+<p>The <a href="https://www.rust-lang.org/learn">learn section</a> on Rust's official website
+provides three different resources for getting started with Rust. Each resource
+has its own approach, but they all share the common goal of making the learning
+process as smooth and enjoyable as possible.</p>
+<p>There's already a well-produced piece of content about this topic <a href="https://www.youtube.com/watch?v=2hXNd6x9sZs">available on
+youtube</a>. So I'll just say the
+following: Take your time and remember to have fun. Learning is a <em>lifetime</em>
+endeavor.</p>
 
                     </main>
 
