--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="preface"><a class="header" href="#preface">Preface</a></h1>
-<p>Hello, friend! Right from the start, I want to clarify that as a little
-Rustacean I won't delve deeply into explaining Rust's arcane secrets. This
+<p>Hello, friend! Right from the start, I want to acknowledge that as a little
+Rustacean I won't delve deeply into Rust's arcane secrets. This
 <a href="https://rust-lang.github.io/mdBook/">mdBook</a> is merely an excuse for me to
 share my enthusiasm and some thoughts from my journey so far.</p>
 <p>If you've come all the way here, I assume you're already on board. So, let's
