--- a/print.html
+++ b/print.html
@@ -173,8 +173,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="preface"><a class="header" href="#preface">Preface</a></h1>
-<p>Hello, friend! Right from the start, I want to clarify that as a little
-Rustacean I won't delve deeply into explaining Rust's arcane secrets. This
+<p>Hello, friend! Right from the start, I want to acknowledge that as a little
+Rustacean I won't delve deeply into Rust's arcane secrets. This
 <a href="https://rust-lang.github.io/mdBook/">mdBook</a> is merely an excuse for me to
 share my enthusiasm and some thoughts from my journey so far.</p>
 <p>If you've come all the way here, I assume you're already on board. So, let's
@@ -189,11 +189,11 @@ as if by magic.</p>
 <p>In programming, this concept is given the fancy name of 'trade-off', which
 basically means the same thing: In life, we can't have everything. At least,
 not at the same time nor out of nowhere. True in Lavoisier’s time, this remains
-so today. But, holy moly, sometimes our expectations for what we deserve in
-life are surprisingly low.</p>
-<p>Where I come from, the first thing any technical support will ask you is if you
-already tried to turn it off and on again. This <em>maneuver</em> is treated as
-universal knowledge to the point people will prefer to lie to the assistant and
+so today. But, holy moly, it's surprising how low our expectations can sometimes
+be for what we can achieve and deserve in life.</p>
+<p>Where I come from, when calling to any technical support, the first thing they
+will ask you is if you already tried to 'turn it off and on again'. This
+<em>maneuver</em> is so widely known that people will often lie to the assistant and
 say they will try to do it once more rather than admit they forgot about it and
 already wasted a regretful amount of time trying to tackle the problem in a
 more reasonable way.</p>
@@ -207,7 +207,7 @@ This is why it became universal knowledge. It works every single time.</p>
 for no apparent reason. And when this happens, the most reasonable approach to
 solve it is by turning them off and then on again. "That's just the way things
 are."</p>
-<p>It doesn't matter how much knowledge we have acquired in life, or how smart or
+<p>It doesn't matter how much experience we have acquired in life, or how smart or
 how creative we are. When something stops working unexpectedly, or even worse,
 when it works but in a really weird and unpredictable way, we sooner rather
 than later end up just accepting it. At some point, everyone will just give up.
@@ -276,8 +276,14 @@ So, while the upcoming sections may seem to cover various topics, in
 reality, I'm simply using different words, or finding new excuses,
 to talk about this <a href="images/celebration.jpg">vibrant</a> and welcoming community.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
-<p>On Rust's official website, the <a href="https://www.rust-lang.org/learn">learn section</a>
-introduces three different options for getting started with Rust.</p>
+<p>The <a href="https://www.rust-lang.org/learn">learn section</a> on Rust's official website
+provides three different resources for getting started with Rust. Each resource
+has its own approach, but they all share the common goal of making the learning
+process as smooth and enjoyable as possible.</p>
+<p>There's already a well-produced piece of content about this topic <a href="https://www.youtube.com/watch?v=2hXNd6x9sZs">available on
+youtube</a>. So I'll just say the
+following: Take your time and remember to have fun. Learning is a <em>lifetime</em>
+endeavor.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="tooling"><a class="header" href="#tooling">Tooling</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="ecosystem"><a class="header" href="#ecosystem">Ecosystem</a></h1>
 <p>One thing that new Rust developers will face sooner rather than later is
