--- a/book/prologue.html
+++ b/book/prologue.html
@@ -179,11 +179,11 @@ as if by magic.</p>
 <p>In programming, this concept is given the fancy name of 'trade-off', which
 basically means the same thing: In life, we can't have everything. At least,
 not at the same time nor out of nowhere. True in Lavoisier’s time, this remains
-so today. But, holy moly, sometimes our expectations for what we deserve in
-life are surprisingly low.</p>
-<p>Where I come from, the first thing any technical support will ask you is if you
-already tried to turn it off and on again. This <em>maneuver</em> is treated as
-universal knowledge to the point people will prefer to lie to the assistant and
+so today. But, holy moly, it's surprising how low our expectations can sometimes
+be for what we can achieve and deserve in life.</p>
+<p>Where I come from, when calling to any technical support, the first thing they
+will ask you is if you already tried to 'turn it off and on again'. This
+<em>maneuver</em> is so widely known that people will often lie to the assistant and
 say they will try to do it once more rather than admit they forgot about it and
 already wasted a regretful amount of time trying to tackle the problem in a
 more reasonable way.</p>
@@ -197,7 +197,7 @@ This is why it became universal knowledge. It works every single time.</p>
 for no apparent reason. And when this happens, the most reasonable approach to
 solve it is by turning them off and then on again. "That's just the way things
 are."</p>
-<p>It doesn't matter how much knowledge we have acquired in life, or how smart or
+<p>It doesn't matter how much experience we have acquired in life, or how smart or
 how creative we are. When something stops working unexpectedly, or even worse,
 when it works but in a really weird and unpredictable way, we sooner rather
 than later end up just accepting it. At some point, everyone will just give up.
